[tool.poetry]
name = "geneticalgorithm"
version = "0.1.0"
description = ""
authors = ["Gideon Oludeyi <go21zq@brocku.ca>"]
readme = "README.md"

[tool.poetry.scripts]
geneticalgorithm = "geneticalgorithm.__main__:main"
experiment = "geneticalgorithm.experiment:main"
decrypt = "geneticalgorithm.decrypt:main"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = {version = "^0.9.0", optional = true}
tqdm = {version = "^4.66.1", optional = true}

[tool.poetry.extras]
all = ["tabulate", "tqdm"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
