[project]
name = "geneticalgorithm"
version = "0.1.0"
description = ""
authors = [
    {name = "Gideon Oludeyi", email = "go21zq@brocku.ca"},
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[project.optional-dependencies]
all = [
    "tabulate<1.0.0,>=0.9.0",
    "tqdm<5.0.0,>=4.66.1",
]

[project.scripts]
geneticalgorithm = "geneticalgorithm.__main__:main"
experiment = "geneticalgorithm.experiment:main"
decrypt = "geneticalgorithm.decrypt:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

